2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_URW_FONTS_NOTICE): Don't emit the notice if
	Ghostscript isn't available, since it was a prerequisite for
	the `GROFF_URW_FONTS_CHECK` macro in the first place.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Add print spooler determination to configuration
	report.

	* m4/groff.m4 (GROFF_PRINT): Add shell variable
	`groff_have_spooler` to house the name of the print spooler
	{"lp" or "lpr"} or the word "no".
	* configure.ac: Report determined spooler, or its absence.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/tests/do-not-seek-the-unseekable.sh: Skip
	seekability check of the standard input stream if there is no
	controlling terminal.

	Fixes <https://savannah.gnu.org/bugs/?62506>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_CHECK_GROHTML_PROGRAMS): Migrate from
	`AC_FOREACH` to `m4_foreach` to avoid obsolescence warning from
	GNU Autoconf 2.70 or later.

	Fixes <https://savannah.gnu.org/bugs/?61059>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* man/groff.7.man: Rename "pilot" list macros for man(7) from
	`BL`/`EL` to `LS`/`LE`, per suggestion from Alejandro Colomar.

2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_MAKEINFO, GROFF_TEXI2DVI): Check for
	makeinfo(1) and texi2dvi(1) programs only if building from Git,
	not a distribution archive.

2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (doc/meintro_fr.ps): Call groff with `-K utf8`
	instead of `-k`, in case the "configure" script didn't find
	uchardet (and preconv(1) thus can't auto-detect an encoding).

	Fixes <https://savannah.gnu.org/bugs/?59463>.

2022-05-21  G. Branden Robinson <g.branden.robinson@gmail.com>
